--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ cmake-build-*/
 *.iws
 # IntelliJ
 out/
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
