--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "leaflet": "^1.9.4",
         "tiny-slider": "^2.9.4"
     }
 }
