--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.69.5",
         "sass-loader": "^13.0.0",
+        "vue": "2.7.15",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "2.7.15",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
