feat(front): add Location and TomSelect.js

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "leaflet": "^1.9.4",
-        "tiny-slider": "^2.9.4"
+        "tiny-slider": "^2.9.4",
+        "tom-select": "^2.3.1"
     }
 }
