--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build the Docker images
-      run: docker compose build
+      run: DOCKER_DEFAULT_PLATFORM="linux/arm64/v8" docker compose build
 
     - name: Tag images
       run: |
