--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Get the latest code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: Build the Docker images
-      run: DOCKER_DEFAULT_PLATFORM="linux/arm64/v8" docker compose build
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
 
-    - name: Tag images
-      run: |
-        docker tag immodemo/nginx:latest ${{ secrets.CONTAINER_REGISTRY_URL }}/nginx:${{ secrets.VERSION }}
-        docker tag immodemo/php-fpm:latest ${{ secrets.CONTAINER_REGISTRY_URL }}/php-fpm:${{ secrets.VERSION }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to container registry
       uses: docker/login-action@v3
@@ -27,7 +25,24 @@ jobs:
         username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
         password: ${{ secrets.CONTAINER_REGISTRY_PWD }}
 
-    - name: Push images to container registry
-      run: |
-        docker push ${{ secrets.CONTAINER_REGISTRY_URL }}/nginx:${{ secrets.VERSION }}
-        docker push ${{ secrets.CONTAINER_REGISTRY_URL }}/php-fpm:${{ secrets.VERSION }}
+    - name: Nginx - Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/arm64/v8
+        build-args: VERSION=${{ secrets.NGINX_VERSION }}
+        target: nginx
+        push: true
+        tags: ${{ secrets.CONTAINER_REGISTRY_URL }}/nginx:${{ secrets.VERSION }}
+
+    - name: PHP-FPM - Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/arm64/v8
+        build-args: VERSION=${{ secrets.PHP_FPM_VERSION }}
+        target: php-fpm
+        push: true
+        tags: ${{ secrets.CONTAINER_REGISTRY_URL }}/php-fpm:${{ secrets.VERSION }}
